<resources>
    <string name="app_name">Merchipts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Merchipts</string>
    <string name="nav_header_subtitle">Universidad de La Punta – 2025</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="salir">Salir</string>
    <string name="agregar_producto">Agregar Producto</string>
    <string name="lista_de_productos">Lista de Productos</string>
    <string name="productos">Productos</string>
    <string name="eliminar_producto">Eliminar Producto</string>
    <string name="ingrese_codigo_producto">Ingrese el código del producto</string>
    <string name="hint_codigo_producto">Código del producto</string>
    <string name="buscar">Buscar</string>
    <string name="detalle_del_producto">Detalle del Producto</string>
    <string name="confirme_eliminacion">Confirme la eliminación del producto seleccionado</string>
    <string name="codigo">Código</string>
    <string name="descripcion">Descripción</string>
    <string name="precio">Precio</string>
    <string name="confirmar_eliminacion">Confirmar eliminación</string>
</resources>